[SRA-002] create table and model class